NetworkPolicy/Example/allow-ingress-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <networkpolicy name>
  namespace: <namespace>
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
